--- a/src/components/Main/styles.module.scss
+++ b/src/components/Main/styles.module.scss
@@ -1,6 +1,18 @@
 .main {
   display: flex;
+  flex-wrap: wrap;
   align-items: center;
   justify-content: space-between;
   height: calc(100vh - 112px);
+
+  @media screen and (max-width: 1110px) {
+    padding-right: 20px;
+    padding-left: 20px;
+  }
+
+  @media screen and (max-width: 990px) {
+    justify-content: center;
+    margin-top: 30px;
+    gap: 50px;
+  }
 }
