--- a/src/components/DescriptionProduct/AddToCart/styles.module.scss
+++ b/src/components/DescriptionProduct/AddToCart/styles.module.scss
@@ -15,7 +15,7 @@
   padding: 10px;
   border: 0;
   border-radius: 10px;
-  background-color: global.$Light-grayish-blue;
+  background-color: global.$Pale-orange;
 
   button {
     display: flex;
