--- a/src/components/DescriptionProduct/AddToCart/styles.module.scss
+++ b/src/components/DescriptionProduct/AddToCart/styles.module.scss
@@ -29,6 +29,10 @@
     &:hover {
       filter: opacity(0.5);
     }
+
+    &:disabled {
+      opacity: 0.5;
+    }
   }
 
   span {
@@ -41,7 +45,7 @@
   align-items: center;
   justify-content: center;
   width: 200px;
-  height: 40px;
+  height: 50px;
   padding: 10px;
   border: 0;
   border-radius: 10px;
@@ -62,6 +66,7 @@
 
   span {
     color: global.$White;
+    font-size: 1rem;
     font-weight: 700;
     letter-spacing: 1px;
   }
